forcefully generate the syslinux.cfg and friends, and start generating JLM specific content

--- a/auto/config
+++ b/auto/config
@@ -1,23 +1,29 @@
 #!/bin/sh
 
-#config file built using tutorial 3 of manual
-
-#	--linux-flavors 686-pae \
+# config file built using tutorial 3 of manual
 
 # rescue package list is broken: it depends on non-existant packages such as thttpd and honeyd
 
 lb config noauto \
 	--binary-images hdd \
 	--architecture i386 \
-	--package-lists "lxde" \
+ 	--package-lists "lxde" \
+	--bootloader syslinux \
 	--apt-indices false \
+	--language fr \
 	--memtest none \
 	--parent-mirror-bootstrap http://debian.mines.inpl-nancy.fr/debian/ \
 	--parent-mirror-binary http://debian.mines.inpl-nancy.fr/debian/ \
 	"${@}"
 
-# Extra content that we need to add on the key
-echo "iceweasel libreoffice openjdk-6-jdk" >> config/package-lists/my.list.chroot
+# Extra content that we need to add on the key: vanilla stuff
+# echo "iceweasel libreoffice" >> config/package-lists/my.list.chroot
+
+# extra content: JLM stuff
+echo "openjdk-6-jdk jarwrapper libmiglayout-java libsimple-xml-java" >> config/package-lists/my.list.chroot
+
+# LXDE: switch package-lists above to "standard" to speedup the generation time. You can regain lxde by decommenting next line (but not sure of what's the best solution)
+# echo "xorg lxde gdm network-manager-gnome desktop-base" >> config/package-lists/my.list.chroot
 
 # Work around a bug in live-build (from http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=622838#58)
 cat > config/hooks/fix_syslinux.sh.binary << END
@@ -27,6 +33,17 @@ vmlinuz=\$(ls vmlinuz* | tail -n1)
 ln  \$vmlinuz vmlinuz || true
 initrd=\$(ls initrd.img* | tail -n1)
 ln  \$initrd initrd.img || true
+cd ../syslinux || exit 1
+cp isolinux.cfg syslinux.cfg
+cp isolinux.bin syslinux.bin
+END
+
+# Work around another bug in live-build where syslinux.cfg cannot be found at boot time
+cat > config/hooks/fix_syslinux.cfg.sh.binary << END
+#!/bin/bash
+cd binary/syslinux || exit 1
+cp isolinux.cfg syslinux.cfg
+cp isolinux.bin syslinux.bin
 END
 
 # We need to speak french, usually
