Rectification des bugs, script fonctionnel et beau menu de boot.
À noter le script tordu à base de fonction récursive sous busybox. Superbe script Write Only.
À commenter d'urgence. L'ensemble a bouté correctement ce jour avec un superbe menu à la clef.

--- a/scripts/Mkinitramfs/live_image/syslinux.cfg
+++ b/scripts/Mkinitramfs/live_image/syslinux.cfg
@@ -1,9 +1,7 @@
+default vesamenu.c32
+prompt 0
+timeout 300
 KBDMAP french.kbd
-PROMPT 0
-TIMEOUT 30
-DEFAULT linux-live
-APPEND init=/sbin/init live=fast lang=fr apm=power-off vga=791 quiet initrd=initrd.img
-TIMEOUT 300
 
 menu title ISN-Live USB key
 menu background splash.png
@@ -11,7 +9,7 @@ menu color title 1;37;44 #c0ffffff #00000000 std
 
 F1 boot.msg
 F2 f2
-LABEL fast
+LABEL DEFAULT
 menu label Live fast boot (Hard disks, USB keys)
 KERNEL linux-live
 APPEND init=/sbin/init live=fast lang=fr apm=power-off vga=791 quiet initrd=initrd.img
