--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
-wiki # I checkouted the wiki within the same tree
+# Classical ignores
+*~
+
+# I checkouted the wiki within the same tree
+wiki
+
+
