move the basesystem into the /boot directory, because that's where the initrd searches for it

--- a/scripts/grub.cfg
+++ b/scripts/grub.cfg
@@ -52,7 +52,7 @@ menuentry "ISN-live" {
   insmod part_msdos
   insmod ext2
   insmod iso9660
-  search --set=root --file /basesystem.sqh
+  search --set=root --file /boot/basesystem.sqh
   set prefix=($root)/boot/grub
   echo "Loading the kernel"
   linux  /boot/vmlinuz-3.2.0-0.bpo.1-amd64 root=$root ro # quiet
@@ -65,7 +65,7 @@ menuentry "ISN-live" {
 menuentry "ISN-live (loopback -- not working)" {
   insmod loopback
   insmod iso9660
-  set isofile="/basesystem.sqh"
+  set isofile="/boot/basesystem.sqh"
   search --set --file $isofile
   echo "Found the disk $isofile on $root"
   loopback loop $isofile
