Fabrication ou modification d'une extension. Modification du syslinux pour tenir compte du mode RAM

--- a/syslinux.cfg
+++ b/syslinux.cfg
@@ -1,5 +1,37 @@
-Default ISN-Live
-prompt 50
-Label ISN-Live
-kernel boot/vmlinuz
-append initrd=boot/initrd.gz
+default vesamenu.c32
+prompt 0
+timeout 300
+KBDMAP french.kbd
+
+menu title Live-ISN
+menu background splash.png
+menu color title 1;37;44 #c0ffffff #00000000 std
+
+F1 boot.msg
+F2 f2
+LABEL DEFAULT
+menu label Live fast boot (Hard disks, USB keys)
+KERNEL linux-live
+APPEND init=/sbin/init live=fast lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+
+LABEL medium
+menu label Live normal boot (R/W blocks devices)
+KERNEL linux-live
+APPEND init=/sbin/init live=medium lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+LABEL all
+menu label Live complet boot (All blocks devices)
+KERNEL linux-live
+APPEND init=/sbin/init live=all lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+LABEL ramfast
+menu label Live fast boot with RAM root (Hard disks, USB keys)
+KERNEL linux-live
+APPEND init=/sbin/init live=all ramroot=true lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+LABEL ram
+menu label Live complet boot with RAM root (All blocks devices)
+KERNEL linux-live
+APPEND init=/sbin/init live=all ramroot=true lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
