Fabrication prototype: * Des images de départ sont accessibles sous http://www.normalesup.org/~boisson/basesystem http://www.normalesup.org/~boisson/extension_dpkg-ISN-1.0.sqh * Le répertoire CD contient les fichiers devant être sur la clef.   Penser à mettre un répertoire /home et /isn, ce dernier contenant   basesystem et les extensions. * TODO indique ce qu'on doit faire * Logiciels contient certains logiciels référencés dans le livre dédié   à l'ISN dont logisim et Isn.java
La clef boute et lance un XFCE. Les répertoires wicd et cups sont
sauvegardés. Tout ça doit être testé.

--- a/CD/syslinux.cfg
+++ b/CD/syslinux.cfg
@@ -1,27 +1,33 @@
+default vesamenu.c32
+prompt 0
+timeout 300
 KBDMAP french.kbd
-DEFAULT linux26
-APPEND ramdisk_size=100000 init=/etc/init lang=fr apm=power-off vga=791 quiet initrd=minirt26.gz BOOT_IMAGE=agreg  
-TIMEOUT 300
 
-PROMPT 1
-DISPLAY boot.msg
+menu title LIVE-ISN
+menu background splash.png
+menu color title 1;37;44 #c0ffffff #00000000 std
+
 F1 boot.msg
 F2 f2
-LABEL agreg  
-KERNEL linux26
-APPEND ramdisk_size=100000 init=/etc/init lang=fr apm=power-off vga=791 quiet initrd=minirt26.gz BOOT_IMAGE=agreg  
-LABEL agregv  
-KERNEL linux26
-APPEND ramdisk_size=100000 init=/etc/init lang=fr apm=power-off vga=791 initrd=minirt26.gz BOOT_IMAGE=agreg  
-LABEL agregtxt
-KERNEL linux26
-APPEND ramdisk_size=100000 init=/etc/init lang=fr apm=power-off vga=normal quiet initrd=minirt26.gz BOOT_IMAGE=agreg  
-LABEL agreg1280
-KERNEL linux26
-APPEND ramdisk_size=100000 init=/etc/init lang=fr apm=power-off vga=794 xmodule=fbdev quiet initrd=minirt26.gz BOOT_IMAGE=agreg  
-LABEL agreg1024
-KERNEL linux26
-APPEND ramdisk_size=100000 init=/etc/init lang=fr apm=power-off vga=791 xmodule=fbdev quiet initrd=minirt26.gz BOOT_IMAGE=agreg  
-LABEL agregsafe
-KERNEL linux26
-APPEND ramdisk_size=100000 init=/etc/init lang=fr apm=power-off vga=791 quiet initrd=minirt26.gz BOOT_IMAGE=agreg graphesafe
+LABEL DEFAULT
+menu label Live fast boot (Hard disks, USB keys)
+KERNEL linux-live
+APPEND init=/sbin/init live=fast lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+
+LABEL medium
+menu label Live normal boot (R/W blocks devices)
+KERNEL linux-live
+APPEND init=/sbin/init live=medium lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+
+LABEL all
+menu label Live complet boot (All blocks devices)
+KERNEL linux-live
+APPEND init=/sbin/init live=all lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+LABEL ram
+menu label Live complet boot with RAM root (All blocks devices)
+KERNEL linux-live
+APPEND init=/sbin/init live=all ramroot=true lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
