Adaptation pour que la clef puisse être construite par linuxliveUSBcreator#

--- a/CD/isolinux/isolinux.cfg
+++ b/CD/isolinux/isolinux.cfg
@@ -1,16 +1,31 @@
-default DEFAULT
+default vesamenu.c32
 prompt 0
 timeout 300
-KBDMAP french.kbd
-KERNEL linuxlive
+kbdmap french.kbd
 
 menu title LIVE-ISN
 menu background splash.png
 menu color title 1;37;44 #c0ffffff #00000000 std
 
-F1 boot.msg
-F2 f2
-LABEL DEFAULT
-menu label Live boot (Hard disks, USB keys)
-KERNEL linuxlive
-APPEND init=/sbin/init live=all lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+label DEFAULT
+menu label Live fast boot (Hard disks, USB keys)
+kernel linuxlive
+append init=/sbin/init live=fast lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+
+label medium
+menu label Live normal boot (R/W blocks devices)
+kernel linuxlive
+append init=/sbin/init live=medium lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+
+label all
+menu label Live complet boot (All blocks devices)
+kernel linuxlive
+append init=/sbin/init live=all lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
+label ram
+menu label Live complet boot with RAM root (All blocks devices)
+kernel linuxlive
+append init=/sbin/init live=all ramroot=true lang=fr apm=power-off vga=791 quiet initrd=initrd.img
+
