--- a/CD/syslinux.cfg
+++ b/CD/syslinux.cfg
@@ -11,23 +11,23 @@ F1 boot.msg
 F2 f2
 LABEL DEFAULT
 menu label Live fast boot (Hard disks, USB keys)
-KERNEL linux-live
+KERNEL linuxlive
 APPEND init=/sbin/init live=fast lang=fr apm=power-off vga=791 quiet initrd=initrd.img
 
 
 LABEL medium
 menu label Live normal boot (R/W blocks devices)
-KERNEL linux-live
+KERNEL linuxlive
 APPEND init=/sbin/init live=medium lang=fr apm=power-off vga=791 quiet initrd=initrd.img
 
 
 LABEL all
 menu label Live complet boot (All blocks devices)
-KERNEL linux-live
+KERNEL linuxlive
 APPEND init=/sbin/init live=all lang=fr apm=power-off vga=791 quiet initrd=initrd.img
 
 LABEL ram
 menu label Live complet boot with RAM root (All blocks devices)
-KERNEL linux-live
+KERNEL linuxlive
 APPEND init=/sbin/init live=all ramroot=true lang=fr apm=power-off vga=791 quiet initrd=initrd.img
 
