Nécessaire pour avoir l'image au boot

--- a/CD/boot/grub/grub.cfg
+++ b/CD/boot/grub/grub.cfg
@@ -9,7 +9,7 @@ if loadfont /boot/grub/font.pf2 ; then
   terminal_output gfxterm
 fi
 
-if background_image /splash.png; then
+if background_image /isolinux/splash.png; then
   set color_normal=light-gray/black
   set color_highlight=white/black
 else
